test/tests/compiler/11_long_integers/valid/plx1_bool_alias.plx
pub fn main(none) bool {
    a: bool = false
    b: bool = true

    return a and b
}
